--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -944,8 +944,8 @@ body,html{
     </div>
 </body>
 </html>
-<script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
-<!-- <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>  -->
+<script src="/static/inspinia/js/jquery-2.1.1.js"></script>
+<!-- <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>  -->
 <script>
 var x = document.getElementById("media"); 
 $('#audio_btn').on('click', function() {
