--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -896,7 +896,7 @@ body,html{
         </div>
         <!-- 头像 -->
         <div class="touxiangbox xiaobox">
-                <!-- <image class="touxiang" src="/image/syhua.png" /> -->
+                <image class="touxiang" src="{$info.photo_url}" />
                 <div class="touxiang"></div>
             </div>
         <!-- 头像边框 -->
@@ -918,7 +918,7 @@ body,html{
         <!-- 文字四 -->
         <div class="wenzisibox xiaobox">
             <image class="wenzisi" src="/image/wenzisi.png" />
-            <span class="wenzispan">一二三四五，上山打老虎</span>
+            <span class="wenzispan">{$info.content}</span>
         </div>
         <!-- 文字五 -->
         <!-- <div class="wenziwubox xiaobox">
@@ -935,13 +935,17 @@ body,html{
         </div>
     </div>
     <!-- 播放音乐 -->
+    {if condition="$info.music_url"}
     <div id="audio_btn" class="rotate">
-        <audio loop src="/image/zdqc.mp3" id="media" autoplay="autoplay"></audio>
+        <audio loop src="{$info.music_url}" id="media" autoplay="autoplay"></audio>
     </div>
+    {/if}
     <!-- 播放录音 -->
+    {if condition="$info.voice_url"}
     <div id="audio_btn2" class="rotate-pause2 rotate2">
-        <audio loop src="/image/zdqc.mp3" id="media2"></audio>
+        <audio loop src="{$info.music_url}" id="media2"></audio>
     </div>
+    {/if}
 </body>
 </html>
 <script src="/static/inspinia/js/jquery-2.1.1.js"></script>
