--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -897,7 +897,7 @@ body,html{
         <!-- 头像 -->
         <div class="touxiangbox xiaobox">
                 <image class="touxiang" src="{$info.photo_url}" />
-                <div class="touxiang"></div>
+                <!-- <div class="touxiang"></div> -->
             </div>
         <!-- 头像边框 -->
         <div class="txborderbox xiaobox">
