--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -943,7 +943,7 @@ body,html{
     <!-- 播放录音 -->
     {if condition="$info.voice_url"}
     <div id="audio_btn2" class="rotate-pause2 rotate2">
-        <audio loop src="{$info.music_url}" id="media2"></audio>
+        <audio loop src="{$info.voice_url}" id="media2"></audio>
     </div>
     {/if}
 </body>
