--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -162,10 +162,11 @@ body,html{
 }
 @keyframes xinfengsan
 {
-0%  {opacity: 0;top: -6.5%;transform: translate(4.8%) rotateX(0deg);}
-48% {opacity: 0;top: -5.8%;transform: translate(4.8%) rotateX(0deg);}
-49% {opacity: 1;top: -5.6%;transform: translate(4.8%) rotateX(0deg);}
-50% {opacity: 1;top: -5.6%;transform: translate(4.8%) rotateX(45deg);}
+0%  {opacity: 0;top: -6.6%;transform: translate(4.8%) rotateX(0deg);}
+48% {opacity: 0;top: -6.6%;transform: translate(4.8%) rotateX(0deg);}
+49% {opacity: 1;top: -6.6%;transform: translate(4.8%) rotateX(0deg);}
+50% {opacity: 1;top: -6.6%;transform: translate(4.8%) rotateX(45deg);}
+75% {opacity: 1;top: -5.6%;transform: translate(4.8%) rotateX(90deg);}
 100% {opacity: 1;top: -5.6%;transform: translate(4.8%) rotateX(180deg);}
 }
 
@@ -808,74 +809,74 @@ body,html{
 
 </style>
 <body>
-        <div class="box">
-                <!-- 背景图1 -->
-                <div class="beijingbox xiaobox">
-                    <image class="beijing" src="/image/背景.png" />
-                </div>
-                <!-- 礼盒 -->
-                <div class="lihebox xiaobox">
-                    <image class="lihe" src="/image/盒子.png" />
-                </div> 
-                <!-- 碗 -->
-                <div class="wanbox xiaobox">
-                    <image class="wan" src="/image/hua.png" />
-                </div>
-                <!-- 樹葉 -->
-                <div class="shuyebox xiaobox">
-                    <image class="shuye" src="/image/樹葉.png" />
-                </div>
-                <!-- 信封1 -->
-                <div class="xinfengbox xiaobox">
-                    <image class="xinfeng" src="/image/画板 3.png" />
-                </div>
-                <!-- 信封2 -->
-                <div class="xinfengerbox xiaobox">
-                    <image class="xinfenger" src="/image/xinfenger.png" />
-                </div>
-                <!-- 信封一角 -->
-                <div class="xinfengsanbox xiaobox">
-                    <image class="xinfengsan" src="/image/信封 一角.png" />
-                </div>
-            </div>
-            <div class="box2">
-                <!-- 背景2 -->
-                <div class="box2beijingbox xiaobox">
-                    <image class="box2beijing" src="/image/1-bj.png" />
-                </div>
-                <!-- 外边框 -->
-                <div class="waiborderbox xiaobox">
-                    <image class="waiborde" src="/image/1- 外邊 框.png" />
-                </div>
-                <!-- 内边框 -->
-                <div class="neiborderbox xiaobox">
-                    <image class="neiborde" src="/image/1-里框.png" />
-                </div>
-                 <!-- 右上花 -->
-                 <div class="rthuabox xiaobox">
-                    <image class="rthua" src="/image/1-右上 花.png" />
-                </div>
-                 <!-- 文字1 -->
-                 <div class="wenzibox xiaobox">
-                    <image class="wenzi" src="/image/1-文字1.png" />
-                </div>
-                <!-- 中间花 -->
-                <div class="chuabox xiaobox">
-                    <image class="chua" src="/image/1-中間花.png" />
-                </div>
-                <!-- 文字二 -->
-                <div class="wenzierbox xiaobox">
-                    <image class="wenzier" src="/image/1-文字2.png" />
-                </div>
-                 <!-- 文字三 -->
-                 <div class="wenzisanbox xiaobox">
-                    <image class="wenzisan" src="/image/1-文字3.png" />
-                </div>
-                 <!-- 左下花 -->
-                 <div class="lbhuabox xiaobox">
-                    <image class="lbhua" src="/image/1-下 左花.png" />
-                </div>
-            </div>
+    <div class="box">
+        <!-- 背景图1 -->
+        <div class="beijingbox xiaobox">
+            <image class="beijing" src="/image/背景.png" />
+        </div>
+        <!-- 礼盒 -->
+        <div class="lihebox xiaobox">
+            <image class="lihe" src="/image/盒子.png" />
+        </div> 
+        <!-- 碗 -->
+        <div class="wanbox xiaobox">
+            <image class="wan" src="/image/hua.png" />
+        </div>
+        <!-- 樹葉 -->
+        <div class="shuyebox xiaobox">
+            <image class="shuye" src="/image/樹葉.png" />
+        </div>
+        <!-- 信封1 -->
+        <div class="xinfengbox xiaobox">
+            <image class="xinfeng" src="/image/画板 3.png" />
+        </div>
+        <!-- 信封2 -->
+        <div class="xinfengerbox xiaobox">
+            <image class="xinfenger" src="/image/xinfenger.png" />
+        </div>
+        <!-- 信封一角 -->
+        <div class="xinfengsanbox xiaobox">
+            <image class="xinfengsan" src="/image/信封 一角.png" />
+        </div>
+    </div>
+    <div class="box2">
+        <!-- 背景2 -->
+        <div class="box2beijingbox xiaobox">
+            <image class="box2beijing" src="/image/1-bj.png" />
+        </div>
+        <!-- 外边框 -->
+        <div class="waiborderbox xiaobox">
+            <image class="waiborde" src="/image/1- 外邊 框.png" />
+        </div>
+        <!-- 内边框 -->
+        <div class="neiborderbox xiaobox">
+            <image class="neiborde" src="/image/1-里框.png" />
+        </div>
+            <!-- 右上花 -->
+            <div class="rthuabox xiaobox">
+            <image class="rthua" src="/image/1-右上 花.png" />
+        </div>
+            <!-- 文字1 -->
+            <div class="wenzibox xiaobox">
+            <image class="wenzi" src="/image/1-文字1.png" />
+        </div>
+        <!-- 中间花 -->
+        <div class="chuabox xiaobox">
+            <image class="chua" src="/image/1-中間花.png" />
+        </div>
+        <!-- 文字二 -->
+        <div class="wenzierbox xiaobox">
+            <image class="wenzier" src="/image/1-文字2.png" />
+        </div>
+            <!-- 文字三 -->
+            <div class="wenzisanbox xiaobox">
+            <image class="wenzisan" src="/image/1-文字3.png" />
+        </div>
+            <!-- 左下花 -->
+            <div class="lbhuabox xiaobox">
+            <image class="lbhua" src="/image/1-下 左花.png" />
+        </div>
+    </div>
     <!-- 场景三 -->
     <div class="box3">
         <!-- 背景3 -->
@@ -929,8 +930,8 @@ body,html{
         <div class="wenziliubox xiaobox">
             <image class="wenziliu" src="/image/wenziliu.png" />
         </div>
-         <!-- 下花 -->
-         <div class="bhuabox xiaobox">
+            <!-- 下花 -->
+            <div class="bhuabox xiaobox">
             <image class="bhua" src="/image/bhua.png" />
         </div>
     </div>
@@ -952,8 +953,12 @@ $('#audio_btn').on('click', function() {
     $(this).toggleClass("rotate-pause");
     if(!$(this).hasClass("rotate-pause")){
         x.play();
+        y.pause();
+        $('#audio_btn2').addClass("rotate-pause2");
     }else{
         x.pause();
+        // y.play();
+        // $('#audio_btn2').toggleClass("rotate-pause2");
     }
 });
 
@@ -962,9 +967,28 @@ $('#audio_btn2').on('click', function() {
     $(this).toggleClass("rotate-pause2");
     if($(this).hasClass("rotate-pause2")){
         y.pause();
+        x.play();
+        $('#audio_btn').removeClass("rotate-pause");
+        // $('#audio_btn').toggleClass("rotate-pause");
+        // if($('#audio_btn').hasClass("rotate-pause")){
+        //     x.play();
+        //     $('#audio_btn').toggleClass("rotate-pause");
+        // }else{
+        //     x.pause();
+        //     $('#audio_btn').toggleClass("rotate-pause");
+        // }
     }else{
-        
         y.play();
+        x.pause();
+        $('#audio_btn').addClass("rotate-pause");
+        // if($('#audio_btn').hasClass("rotate-pause")){
+        // //     x.play();
+           
+        //     $('#audio_btn').removeClass("rotate-pause");
+        // }else{
+        //     // x.pause();
+        //     $('#audio_btn').addClass("rotate-pause");
+        // }
     }
 });
 
