--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -509,8 +509,14 @@ body,html{
     transform: translate(-49%);
     border-radius: 50%;
     background: yellow;
+    overflow: hidden;
     animation:touxiang 4.8s;
     animation-delay:19.5s;
+}
+
+.touxiangimg{
+    width: 100%;
+    height: 100%;
 }
 
 @keyframes touxiang
@@ -897,8 +903,10 @@ body,html{
         </div>
         <!-- 头像 -->
         <div class="touxiangbox xiaobox">
-                <image class="touxiang" src="{$info.photo_url}" />
-                <!-- <div class="touxiang"></div> -->
+                <!-- <image class="touxiang" src="{$info.photo_url}" /> -->
+                <div class="touxiang">
+                    <image class="touxiangimg" src="{$info.photo_url}" />
+                </div>
             </div>
         <!-- 头像边框 -->
         <div class="txborderbox xiaobox">
