--- a/application/admin/view/box/add.html
+++ b/application/admin/view/box/add.html
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">照片/视频</label>
+                            <label class="col-sm-2 control-label">照片</label>
                             <div class="col-sm-9">
                                 <dd class="upload_area clearfix" style="margin: 0 auto;">
                                     <ul id="imglist" class="post_imglist">
@@ -56,7 +56,7 @@
                             <label class="col-sm-2 control-label">语音</label>
                             <div class="col-sm-9">
                                 <dd class="upload_area clearfix" style="margin: 0 auto;">
-                                    <ul id="imglist" class="post_imglist">
+                                    <ul id="imglist">
                                         <li><a href="" class="music_css" ><img class="wh60" id="file1" src="__STATIC__/images/default.jpg"></a></li>
                                     </ul>
                                     <label for="voice_file"><div class="upload_btn"></div></label>
