--- a/application/admin/view/box/add.html
+++ b/application/admin/view/box/add.html
@@ -57,7 +57,7 @@
                             <div class="col-sm-9">
                                 <dd class="upload_area clearfix" style="margin: 0 auto;">
                                     <ul id="imglist">
-                                        <li><a href="" class="music_css" ><img class="wh60" id="file1" src="__STATIC__/images/default.jpg"></a></li>
+                                        <li><a href="" class="music_css" ><img class="wh60" id="file1" src="__STATIC__/images/default.jpg" style="float: left"></a></li>
                                     </ul>
                                     <label for="voice_file"><div class="upload_btn"></div></label>
                                 </dd>
