--- a/application/admin/view/box/edit.html
+++ b/application/admin/view/box/edit.html
@@ -60,7 +60,7 @@
                             <div class="col-sm-9">
                                 <dd class="upload_area clearfix" style="margin: 0 auto;">
                                     <ul id="imglist">
-                                        <li><a href="{$info.voice_url|default='javascript:;'}" class="music_css" ><img class="wh60" id="file1" {if condition="$info.voice_url"}src="/static/images/music.jpg"{/if}></a></li>
+                                        <li><a href="{$info.voice_url|default='javascript:;'}" class="music_css" ><img class="wh60" id="file1" {if condition="$info.voice_url"}src="/static/images/music.jpg"{/if}  style="float: left"></a></li>
                                     </ul>
                                     <!-- <label for="voice_file"><div class="upload_btn"></div></label> -->
                                 </dd>
