--- a/application/admin/view/goods/index.html
+++ b/application/admin/view/goods/index.html
@@ -18,7 +18,7 @@
 
                         <div class="col-sm-2 m-b-xs">
                             <select name="is_show" class="input-sm form-control input-s-sm inline">
-                                <option value="">选择商品状态</option>
+                                <option value="0">选择商品状态</option>
                                 <option {if condition="$is_show eq '1' "} selected {/if} value="1">已上架</option>
                                 <option {if condition="$is_show heq 0 "} selected {/if} value="0">未上架</option>
                             </select>
