--- a/application/admin/view/box_music/add.html
+++ b/application/admin/view/box_music/add.html
@@ -32,7 +32,8 @@
                                         <ul id="imglist" class="post_imglist">
                                             <li><a href="" class="music_css"><img class="wh60" id="file0" src="__STATIC__/images/default.jpg"></a></li>
                                         </ul>
-                                        <label for="file_apload"><div class="upload_btn"></div></label>
+                                        <label for="file_apload" style="float: left"><div class="upload_btn"></div></label>
+                                        <div style=" margin-left: 10px;float: left;line-height: 60px;"><span class="jianyi" style="color: #5fb878;">只能上传小于10M的</span></div>
                                     </dd>
                             </div>
                         </div>
