--- a/application/admin/view/box_music/edit.html
+++ b/application/admin/view/box_music/edit.html
@@ -93,9 +93,10 @@
                                         <ul id="imglist" class="post_imglist">
                                             <li><a href="{$info.music_url}" class="music_css"><img class="wh60" id="file0" src="__STATIC__/images/music.jpg"></a></li>
                                         </ul>
-                                        <div class="upload_btn">
+                                        <div class="upload_btn" style="float: left">
                                             <label for="file_apload"><div class="upload_btn"></div></label>
                                         </div>
+                                        <div style=" margin-left: 10px;float: left;line-height: 60px;"><span class="jianyi" style="color: #5fb878;">只能上传小于10M的</span></div>
                                     </dd>
                             </div>
                         </div>
