--- a/application/admin/view/order/index.html
+++ b/application/admin/view/order/index.html
@@ -48,8 +48,8 @@
                                
                                 <div class="col-sm-2">
                                     <div class="form-group">
-                                        <label class="control-label" for="kw">用户信息</label>
-                                        <input type="text" placeholder="用户手机号/姓名/昵称" name="kw" value="{$kw}" class="form-control">
+                                        <label class="control-label" for="kw">收货信息</label>
+                                        <input type="text" placeholder="收货手机号/姓名/昵称" name="kw" value="{$kw}" class="form-control">
                                     </div>
                                 </div>
                         
