--- a/application/admin/view/goods/add_goods_attr.html
+++ b/application/admin/view/goods/add_goods_attr.html
@@ -98,7 +98,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">广告图</label>
+                            <label class="col-sm-2 control-label">banner图</label>
                             <div class="col-sm-9">
                                     <dd class="upload_area clearfix" style="margin: 0 auto;">
                                         <ul id="imglist" class="post_imglist">
@@ -106,6 +106,17 @@
                                         </ul>
                                         <label for="image_file"><div class="upload_btn"></div></label>
                                     </dd>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">图标</label>
+                            <div class="col-sm-9">
+                                <dd class="upload_area clearfix" style="margin: 0 auto;">
+                                    <ul id="imglist" class="post_imglist">
+                                        <li><img class="wh60" id="image_src2" src="{$info.icon|default='/static/images/default.jpg'}"></li>
+                                    </ul>
+                                    <label for="image_file2"><div class="upload_btn"></div></label>
+                                </dd>
                             </div>
                         </div>
                         <div class="form-group">
@@ -122,8 +133,11 @@
                         </div>
                     </form>
                      <!-- 图片上传 -->
-                     <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('goods/upload_file')}" enctype="multipart/form-data">
+                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('goods/upload_file')}" enctype="multipart/form-data">
                         <input type="file" id="image_file" value="" accept="image/*" name="file" onchange="upload_file()" style="display: none">
+                    </form>
+                    <form method="post" class="form-horizontal" id="ajaxForm2" action="{:url('goods/upload_file')}" enctype="multipart/form-data">
+                        <input type="file" id="image_file2" value="" accept="image/*" name="file" onchange="upload_file2()" style="display: none">
                     </form>
                 </div>
             </div>
@@ -143,6 +157,17 @@
             if(data.status == 1){
                 $('input[name="priture"]').val(data.data);
                 $('#image_src').attr('src',data.data);
+            }else{
+                alert(data.msg);
+            }
+        });
+    }
+    //文件上传
+    function upload_file2(){
+        $("#ajaxForm2").ajaxSubmit(function (data) {
+            if(data.status == 1){
+                $('input[name="icon"]').val(data.data);
+                $('#image_src2').attr('src',data.data);
             }else{
                 alert(data.msg);
             }
