--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -974,7 +974,7 @@ body,html{
 <script>
 
 function test(){
-    wx.miniProgram.reLaunch({url: '/pages/commodity/detalis/payment/award/award'})  
+    wx.miniProgram.reLaunch({url: '/pages/commodity/detalis/payment/award/award?id=459'})  
     console.log(666)
 }
 
