--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -974,10 +974,11 @@ body,html{
 <script>
 
 function test(){
+    alert(459)
     wx.miniProgram.reLaunch({url: '/pages/commodity/detalis/payment/award/award?id=459'})  
-    console.log(666)
+    alert(666)
+    
 }
-
 
 
 
