--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -974,9 +974,9 @@ body,html{
 <script>
 
 function test(){
-    alert(459)
-    wx.miniProgram.reLaunch({url: '/pages/commodity/detalis/payment/award/award?id=459'})  
-    alert(666)
+    alert(459000000000)
+    // wx.miniProgram.reLaunch({url: '/pages/commodity/detalis/payment/award/award?id=459'})  
+    alert(66600000000000000)
     
 }
 
