--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -971,20 +971,23 @@ body,html{
 <script src="/static/inspinia/js/jquery-2.1.1.js"></script>
 <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
 <!-- <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>  -->
+
 <script>
 
 function test(){
     
     alert(459000000000)
 
-    wx.miniProgram.reLaunch({url: '/pages/commodity/detalis/payment/award/award?id=459'})
+    wx.miniProgram.reLaunch("{$url}")
 
     alert(66600000000000000)
     
 }
 
+</script>
 
 
+<script>
 
 var x = document.getElementById("media"); 
 $('#audio_btn').on('click', function() {
