--- a/application/admin/view/order/refund_edit.html
+++ b/application/admin/view/order/refund_edit.html
@@ -156,7 +156,7 @@
                     <label class="col-sm-2 control-label">审核意见</label>
                     <div class="col-sm-9">
                         <div class="radio radio-success radio-inline">
-                            <input type="radio" value="2" name="status" id="status1" />
+                            <input type="radio" checked value="2" name="status" id="status1" />
                             <label for="alipay1">审核通过</label>
                         </div>
 
