--- a/application/admin/view/config/base.html
+++ b/application/admin/view/config/base.html
@@ -137,6 +137,12 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">appsecret</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="appsecret" value="{$info.appsecret}" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="col-sm-2 control-label">群抢开奖时间（分钟）</label>
                             <div class="col-sm-9">
                                 <input type="text" name="start_time" value="{$info.start_time}" class="form-control">
