--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -980,7 +980,7 @@ function test(){
 
 
         wx.miniProgram.navigateTo({
-            url:'/pages/commodity/detalis/payment/award/award?id=459',
+            url:"/pages/commodity/detalis/give/GetTheGift/GetTheGift?id={$card_id}",
             success: function(){
                 console.log('success')
             },
