--- a/application/admin/view/config/base.html
+++ b/application/admin/view/config/base.html
@@ -137,9 +137,21 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">appsecret</label>
+                            <label class="col-sm-2 control-label">微信通知模板id</label>
                             <div class="col-sm-9">
-                                <input type="text" name="appsecret" value="{$info.appsecret}" class="form-control">
+                                <input type="text" name="template_id" value="{$info.template_id}" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">商户号</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="mch_id" value="{$info.mch_id}" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">md5秘钥</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="md5_key" value="{$info.md5_key}" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
