--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -974,8 +974,8 @@ body,html{
 <script>
 
 function test(){
-    wx.miniProgram.reLaunch({url: '/pages/commodity/detalis/payment/award/award?id=459'})  
-    console.log(666)
+    // wx.miniProgram.reLaunch({url: '/pages/commodity/detalis/payment/award/award?id=459'})  
+    // console.log(wx.miniProgram)
 }
 
 
