--- a/application/admin/view/order/jifen.html
+++ b/application/admin/view/order/jifen.html
@@ -15,17 +15,20 @@
                     <div class="col-sm-2">
                         <div class="form-group">
                             <label class="control-label" for="status">审核状态</label>
-                            <select name="orderstatus" class="form-control" style="width:180px;">
-                                
+                            <select name="status" class="form-control" style="width:180px;">
+                                <option value="" >全部</option>
+                                <option value="0" {if condition="$status heq '0'"}selected{/if}>未审核</option>
+                                <option value="1" {if condition="$status eq 1"}selected{/if}>审核通过</option>
+                                <option value="2" {if condition="$status eq 2"}selected{/if}>审核不通过</option>
                             </select>
                         </div>
                     </div>
                     
                     <div class="col-sm-2">
-                            <div class="form-group">
-                                <label class="control-label" for="order_id">订单号</label>
-                                <input type="text" placeholder="订单号" name="order_sn" value="{$order_sn}" class="form-control">
-                            </div>
+                        <div class="form-group">
+                            <label class="control-label" for="order_id">订单号</label>
+                            <input type="text" placeholder="订单号" name="order_sn" value="{$order_sn}" class="form-control">
+                        </div>
                     </div>
                     <div class="col-sm-1">
                         <div class="form-group">
@@ -50,6 +53,7 @@
                                     <th>订单状态</th>
                                     <th>审核状态</th>
                                     <th>提交审核时间</th>
+                                    <th>审核人</th>
                                     <!-- <th>审核时间</th> -->
                                     <th>操作</th>
                                 </tr>
@@ -63,11 +67,12 @@
                                     <td>{$vo.card_name}</td>
                                     <td>{$vo.order_amount}</td>
                                     <td>{$pay_status[$vo['pay_status']]}</td>
-                                    <td>{$status[$vo['status']]}</td>
+                                    <td>{$status_arr[$vo['status']]}</td>
                                     <td>{$vo.addtime|date="Y-m-d H:i:s",###}</td>
+                                    <td>{$vo.admin_name}</td>
                                     <!-- <td>{$vo.examine_time|date="Y-m-d H:i:s",###}</td> -->
                                     <td>
-                                        <a class="btn btn-default" href="{:url('order/edit',['order_id'=>$vo.id])}"><i class="fa fa-list"></i> 审核</a>
+                                        <a class="btn btn-default" href="{:url('order/jifen_examine',['id'=>$vo.id])}"><i class="fa fa-list"></i> 审核</a>
                                     </td>
                                 </tr>
                                 {/volist}
