--- a/application/admin/view/sharing/add_topic.html
+++ b/application/admin/view/sharing/add_topic.html
@@ -7,36 +7,15 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>添加类别</h5>
+                    <h5>添加话题</h5>
                 </div>
                 <div class="ibox-content">
-                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box_cate/cate_post')}" enctype="multipart/form-data">
+                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('add_topic')}"  enctype="multipart/form-data">
+                        <input type="hidden" name="id" value="5">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">名称</label>
+                            <label class="col-sm-2 control-label">话题名称</label>
                             <div class="col-sm-9">
                                 <input type="text" name="name" value="" class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label ">选择上级分类</label>
-                            <div class="col-sm-9">
-                                <select name="pid"  class="form-control">
-                                    <option value="0">顶级分类</option>
-                                    {volist name="cate_list" id="vo"}
-                                        <option value="{$vo.id}" {if condition="$vo.id eq $pid"}selected{/if} >{$vo.name}</option>
-                                    {/volist}
-                                </select> 
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">图片</label>
-                            <div class="img-preview" style="display:{$info.picture? 'block':'none'};margin-left:-20%">
-                                <img src="{$info.picture|default=''}" id='img_show' style=" max-width: 300px; max-height: 300px">
-                            </div>
-                            <div class="form-group" style="margin-left:18%;">
-                                <label title="上传图片" for="pictur_btn" class="btn btn-primary" id="pictur">上传新图像
-                                    <input type="file" accept="image/jpg,image/jpeg,image/bmp,image/png,image/gif/*" name="file" id="pictur_btn" class="hide" />
-                                </label>
                             </div>
                         </div>
                         <div class="form-group">
@@ -58,6 +37,8 @@
                                 </div>
                             </div>
                         </div>
+                        <input type="file" name="image[]" multiple/> <br> 
+                        <input type="submit">
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <input value="提交" type="submit" class="btn btn-primary ajax-post" target-form="form-horizontal" type="submit">
