--- a/application/admin/view/turntable/index.html
+++ b/application/admin/view/turntable/index.html
@@ -23,6 +23,7 @@
                             <tr>
                                 <th>订单id</th>
                                 <th>礼盒数量</th>
+                                <th>下单时间</th>
                                 <th>开奖时间</th>
                                 <th>结束时间</th>
                                 <th>盒子id</th>
@@ -34,11 +35,12 @@
                             <tr>
                                 <td>{$vo.order_id}</td>
                                 <td>{$vo.godos_num|default="0"}</td>
+                                <td>{$vo.add_time|date="Y-m-d H:i:s",###}</td>
                                 <td>{$vo.lottery_time|date="Y-m-d H:i:s",###}</td>
                                 <td>{$vo.overdue_time|date="Y-m-d H:i:s",###}</td>
                                 <td>{$vo.box_id}</td>
                                 <td>
-                                    <a class="btn btn-default delete" href="{:url('edit',['order_id'=>$vo.order_id],false)}" >设置中奖名单</i></a>
+                                    <!-- <a class="btn btn-default delete" href="{:url('edit',['order_id'=>$vo.order_id],false)}" >设置中奖名单</i></a> -->
                                 </td>
                             </tr>
                             {/volist}
